--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,17 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <form id="form" action="">
+        <input
+          id="monsterName"
+          type="text"
+          placeholder="enter a monster name"
+        />
+        <button>click me</button>
+      </form>
+      <div id="output"></div>
+    </div>
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
