--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -17,8 +17,8 @@
         />
         <button>click me</button>
       </form>
-      <div id="output"></div>
-      <div class="flexwrap"></div>
+      <div class="flexwrap"><div id="output"></div>
+    </div>
     </div>
     <script type="module" src="js/main.js"></script>
   </body>
