--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -9,12 +9,15 @@
   </head>
   <body>
     <div id="app">
-      <form id="form" action="">
+      
+      <form name='form' id="form" action="">
+        <label for='form'>fart</label>
         <input
           id="monsterName"
           type="text"
           placeholder="enter a monster name"
         />
+    
         <button>click me</button>
       </form>
       <div class="flexwrap"><div id="output"></div>
