--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -11,7 +11,7 @@
     <div id="app">
       
       <form name='form' id="form" action="">
-        <label for='form'>fart</label>
+        <label for='form'></label>
         <input
           id="monsterName"
           type="text"
