--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -8,6 +8,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h1>Dungeons&Dragons Monsters</h1>
     <div id="app">
       <form name="form" id="form" action="">
         <label for="form"></label>
