--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -11,14 +11,16 @@
     <h1>Dungeons&Dragons Monsters</h1>
     <div id="app">
       <form name="form" id="form" action="">
-        <label for="form"></label>
-        <input
-          id="monsterName"
-          type="text"
-          placeholder="enter a monster name"
-        />
+        <div id="input">
+          <label for="form"></label>
+          <input
+            id="monsterName"
+            type="text"
+            placeholder="enter a monster name"
+          />
 
-        <button>click me</button>
+          <button id="button">click me</button>
+        </div>
       </form>
       <div class="flexwrap"><div id="output"></div></div>
     </div>
