--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -12,6 +12,7 @@
     <div id="app">
       <form name="form" id="form" action="">
         <div id="input">
+          <h2>USE LOWERCASE LETTERS!</h2>
           <label for="form"></label>
           <input
             id="monsterName"
